[metadata]
name = thonkify
version = 0.0.1
description = A flask server for making thonk-based letters
url = https://github.com/thonkify/thonkify
author = David Dellsperger
author_email = david.dellsperger@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    flask
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    thonkify-server = thonkify.app:main
